Fix content overflowing issue

--- a/static/global.css
+++ b/static/global.css
@@ -21,7 +21,6 @@
 }
 
 body {
-    margin: 0;
     background-color: var(--secondary-color);
     height: 100vh;
     width: 100vw;
